Remove add-opens